styles/globals/_base.scss
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
// File:    Base
// -------------------------------------------------------------

*,
*::after,
*::before {
  @include border-box;
  -webkit-tap-highlight-color: $transparent;
  -webkit-touch-callout: none;
}

html,
body {
  font-display: swap;
  font-family: $sans;
  height: 100%;
  letter-spacing: .03em;
  margin: 0;
  min-height: 100%;
  padding: 0;
  // user-select: none;
  width: 100%;
}

html {
  background-color: $white;
  scroll-behavior: smooth;
}

body {
  @include border-box;
  @include clearfix;
  @include font-size-m;
  background-color: $white;
  color: $black;
  font-family: $sans;
  letter-spacing: .03em;
  min-height: 100%;
  -webkit-overflow-scrolling: touch;
  -ms-overflow-style: none;
  overflow-x: hidden;
  overflow-y: scroll;
  overscroll-behavior: contain;
  scrollbar-width: none;
}

::-webkit-scrollbar,
body::-webkit-scrollbar {
  appearance: none;
  display: none;
  scrollbar-width: none;
  visibility: hidden;
}

::-moz-selection {
  background-color: $black;
  color: $white;
}
::selection {
  background-color: $black;
  color: $white;
}

a,
button,
[type=button],
[type=submit] {
  @include hover-animation(.50s);
  border: 0;
  cursor: pointer;
  margin: 0;
  padding: 0;
  -webkit-tap-highlight-color: $transparent;
  text-decoration: none;
  vertical-align: bottom;
}

figure {
  @include appear-animation(.50s);
  border: 0;
  display: block;
  margin: 0;
  max-height: 100%;
  max-width: 100%;
  overflow: hidden;
  padding: 0;
  figcaption {
    @include font-size-s;
    border: 0;
    margin: 0;
    vertical-align: bottom;
  }
}

img {
  @include appear-animation(.50s);
  border: 0;
  display: block;
  margin: 0;
  max-height: 100%;
  max-width: 100%;
  overflow: hidden;
  padding: 0;
}

svg {
  @include appear-animation(.50s);
  @include hover-animation(.50s);
  border: 0;
  display: block;
  height: inherit;
  margin: 0;
  overflow: hidden;
  padding: 0;
  width: auto;
  * {
    @include hover-animation(.50s);
  }
}

span {
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}

// Media Query 240px
// -------------------------------------------------------------
@media #{$xxs} {
}

// Media Query 360px
// ------------------------------------------------------------
@media #{$xs} {
}

// Media Query 480px
// -------------------------------------------------------------
@media #{$s} {
}

// Media Query 720px
// -------------------------------------------------------------
@media #{$m} {
}

// Media Query 960px
// -------------------------------------------------------------
@media #{$l} {
}

// Media Query 1440px
// -------------------------------------------------------------
@media #{$xl} {
}

// Media Query 1920px
// -------------------------------------------------------------
@media #{$xxl} {
}

